force-app/main/default/objects/SBQQ__ProcessInputCondition__c/fields/SBQQ__Active__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this rule is active or inactive.</description>
        <inlineHelpText>Flag that indicates whether this rule is active or inactive.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>