force-app/main/default/objects/SBQQ__ProcessInputCondition__c/fields/SBQQ__Operator__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Operator__c</fullName>
        <description>The operator being used when comparing process input values.</description>
        <inlineHelpText>Select the operator to use when comparing process input values.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>