force-app/main/default/objects/SBQQ__ProcessInputCondition__c/fields/SBQQ__ProcessInput__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProcessInput__c</fullName>
        <description>Process input that owns the condition.</description>
        <inlineHelpText>Process input that owns the condition.</inlineHelpText>
        <label>Process Input</label>
        <referenceTo>SBQQ__ProcessInput__c</referenceTo>
        <relationshipLabel>Process Input Conditions</relationshipLabel>
        <relationshipName>ProcessInputCondition</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>