force-app/main/default/objects/SBQQ__ProcessInputCondition__c/fields/SBQQ__Value__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Value__c</fullName>
        <description>The value used to compare to the controlling process input.</description>
        <inlineHelpText>The value used to compare to the controlling process input.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>